[tool.poetry]
name = "pybento4decrypt"
version = "0.1.0"
description = "MP4 decryption via Bento4"
authors = ["Danilo Dias <danilodias.1246@gmail.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.9"
pybind11 = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
